--- a/web/example.html
+++ b/web/example.html
@@ -1,5 +1,5 @@
 <!--
- * Copyright 2009, Google Inc.
+ * Copyright 2009-2011, Charles Dietrich, Google Inc.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
